[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/LevelIconsDemo.png" type="Texture" id=1]
[ext_resource path="res://MapInterface/script/LevelIcon.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="LevelIcon" type="Node2D" groups=["LevelIcons"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
z_index = -3
texture = ExtResource( 1 )
hframes = 12
vframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
